Added tests for 3